fix extra padding

--- a/react-app/src/components/Page/Story.css
+++ b/react-app/src/components/Page/Story.css
@@ -65,6 +65,7 @@ div > .story-body {
 	align-content: center;
 	align-items: center;
 	margin:0;
+	padding:0 !important;
 }
 
 .clap-icon {
